samples/_failures_safe/1761317156_1e449f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e50143a4.c: In function ‘main’:
./samples/SAFE/__tmp_e50143a4.c:148:5: error: expected identifier or ‘(’ at end of input
  148 |     Graph
      |     ^~~~~
./samples/SAFE/__tmp_e50143a4.c:148:5: error: expected declaration or statement at end of input
